# MineMEETS

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  REFERENCE.md  TRANSFORMATION_SUMMARY.md  app.py  app.py.bak  docker-compose.yml  main.py  pyproject.toml  requirements-pinecone.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
agents/: audio_agent.py  base_agent.py  config.py  coordinator.py  document_processor.py  email_agent.py  image_agent.py  insights_agent.py  internet_agent.py  llm.py  multimodal_rag.py  pinecone_db.py  qa_agent.py
backend/: coordinator.py  email.py  embedder.py  pinecone_db.py  rag_agent.py  task_parser.py  transcribe.py
backend.py/: embedder.py
backend/agents/: insights_agent.py  qa_agent.py
prompts/: insight_prompt.txt  send_email.txt  summarize.txt  user_centric_prompt.txt
tests/: __init__.py  conftest.py  test_document_processor.py  test_llm.py  test_pinecone_db.py  test_rag_overlay_and_coordinator.py
