[project]
name = "minemeets"
version = "0.1.0"
description = "Production MLOps Multimodal RAG Meeting Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pinecone>=5.0.0",
    "sentence-transformers>=5.1.0",
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "Pillow>=10.0.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "requests>=2.31.0",
    "ollama>=0.4.0",
    "numpy>=2.2.0",
    "tqdm>=4.67.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "gradio>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "black>=25.0.0",
    "pylint>=3.0.0",
    "mypy>=1.15.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["agents"]

[tool.setuptools.package-data]
agents = ["*.json", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=agents --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false